# Knowledge-Base-Builder-Agent

./: .env.example  .gitignore  LICENSE  QUICK_START.md  README.md  SUPERVISOR_INTEGRATION.md  UBUNTU_DEPLOYMENT.md  api_server.py  gunicorn_config.py  pyproject.toml  requirements.txt  supervisor.py  supervisor_example.py
LTM/: __init__.py
agents/: __init__.py  demo.py
agents/workers/: __init__.py  abstract_worker_agent.py  knowledge_base_builder_agent.py
communication/: __init__.py  models.py  protocol.py
config/: agent_config.json  settings.yaml
shared/: __init__.py  database.py  llm_parser.py  utils.py
tests/: __init__.py  test_message_handling.py  test_supervisor_format.py
