[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-base-builder-agent"
version = "0.1.0"
description = "A multi-agent system for building and maintaining team wiki knowledge bases"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Knowledge Base Builder Agent Contributors"}
]
keywords = ["multi-agent", "knowledge-base", "wiki", "agent-system"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    # Currently using only standard library
    # Future dependencies will be added here
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
future = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/knowledge-base-builder-agent"
Documentation = "https://github.com/yourusername/knowledge-base-builder-agent#readme"
Repository = "https://github.com/yourusername/knowledge-base-builder-agent"
Issues = "https://github.com/yourusername/knowledge-base-builder-agent/issues"

[tool.setuptools]
packages = ["agents", "shared", "tests"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

